--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,22 @@
-.App {
-  text-align: center;
+.container {
+    text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header {
+    height: 50px;
+    border-bottom: 1px solid #222;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.content {
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
-.App-title {
-  font-size: 1.5em;
+.content .viewer {
+    height: 750px;
+    border-right: 1px solid #222;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.content .chooser {
+    height: 750px;
 }
