--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .content .viewer {
     height: 750px;
-    border-right: 1px solid #222;
+    border-left: 1px solid #222;
 }
 
 .content .chooser {
