--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
     height: 50px;
     background: black;
     border-bottom: 1px solid #222;
+    color: white;
+    font-size: 150%;
+    font-weight: bold;
 }
 
 .content {
